// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextResponse /> render default 1`] = `
<div
  className="my-2 p-2 bg-white"
>
  <div
    className="div-textarea p-1"
    dangerouslySetInnerHTML={
      {
        "__html": "response",
      }
    }
  />
</div>
`;

exports[`<TextResponse /> render without allowLatexPreview 1`] = `
<div
  className="my-2 p-2 bg-white"
>
  <div
    className="div-textarea p-1"
    dangerouslySetInnerHTML={
      {
        "__html": "response",
      }
    }
  />
</div>
`;

exports[`<TextResponse /> render without textResponseConfig 1`] = `
<div
  className="my-2 p-2 bg-white"
>
  <div
    dangerouslySetInnerHTML={
      {
        "__html": "response",
      }
    }
  />
</div>
`;
